--- a/pom.xml
+++ b/pom.xml
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http:///</url>http://18.117.191.25:8081/repository/tesla-releases/
+	      <url>http:///</url>http://18.117.191.25:8081/repository/tesla-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http:///</url>http://18.117.191.25:8081/repository/tesla-snapshots/
+	      <url>http:///</url>http://18.117.191.25:8081/repository/tesla-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
