--- a/pom.xml
+++ b/pom.xml
@@ -94,14 +94,14 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.223.101.237:8081/repository/new-tesla-Release/</url>
+	      <name>admin Releases Nexus Repository</name>
+	      <url>http://18.223.101.237:8081/repository/tesla-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository</name>
-	      <url>http://18.223.101.237:8081/repository/New-tesla-Snapshot/</url>
+	      <name>admin Snapshots Nexus Repository</name>
+	      <url>http://18.223.101.237:8081/repository/tesla-snapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
