--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
 	
-	<version>0.0.2-SNAPSHOT</version> 
+	<version>0.0.2</version> 
 	
 	<name>maven-web-application</name>
 
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.131.151.142:9000/</sonar.host.url> 
+		<sonar.host.url>http://3.128.18.190:9000/</sonar.host.url> 
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>admin Releases Nexus Repository</name>
-	      <url>http://18.223.101.237:8081/repository/new-tesla-Release/</url>
+	      <url>http://3.15.166.61:8081/repository/new-tesla-Release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>admin Snapshots Nexus Repository</name>
-	      <url>http://18.223.101.237:8081/repository/New-tesla-Snapshot/</url>
+	      <url>http://3.15.166.61:8081/repository/New-tesla-Snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
